--- a/index.html
+++ b/index.html
@@ -99,9 +99,10 @@
 
 
 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-lg btn-primary-outline display-4" onclick="document.querySelector('.phone-call').style='display: flex'">
+                <button class="material-btn" onclick="document.querySelector('.phone-call').style='display: flex'"><a class="btn btn-lg display-4">
 
-                        Заказать звонок</a></div>
+                        Заказать звонок</a></button>
+
 
 
 
@@ -185,7 +186,7 @@
                     <div data-aos="fade-up"
               data-aos-easing="ease-out-cubic"
               data-aos-duration="1000" class="mbr-section-btn align-left pt-3">
-                    <a style="padding: 10px 30px;  color: white;" class="btn btn-sm btn-primary-outline display-4" href="page7.pdf">Подробнее...</a>
+                    <a style="padding: 10px 30px;  color: white;" class="btn btn-sm btn-primary-outline display-4" href="page7.pdf">Полное описание</a>
                   </div>
                 </li>
 					  </ul>  
@@ -271,7 +272,7 @@
     <h2 data-aos="fade-down"
               data-aos-easing="ease-out-cubic"
               data-aos-duration="1000"
-              data-aos-anchor-placement="bottom-bottom" class="titles mbr-fonts-style mbr-section-title align-center display-2">Подробнее описание услуг</h2>
+              data-aos-anchor-placement="bottom-bottom" class="titles mbr-fonts-style mbr-section-title align-center display-2">Полное описание описание услуг</h2>
 
     <div class="container">
          
@@ -410,7 +411,7 @@
                                         <p class="mbr-text mbr-fonts-style align-left display-7">
 Авторулевой «Урал навигатор"разработан для управления курсом водоизмещающих судов и предназначен для установки на суда с рулевыми механизмами с импульсным или пропорциональным управлением (клапанные гидравлические, электрические секторные или винторулевые колонки)
                                         </p>
-                                        <div class="mbr-section-btn pb-3"><a class="btn-underline mr-3 display-4" href="page7.pdf">Читать больше</a></div>
+                                        <div class="mbr-section-btn pb-3"><a target="_blank" class="btn-underline mr-3 display-4" href="page7.pdf">Читать больше</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -442,7 +443,7 @@
                     <h4 class="mbr-fonts-style mbr-card-title align-center pb-2 display-5">ООО «ПЕТРОШИП»</h4>
                     </div>
                     <div onclick="document.querySelector('.history').style='height:100%;'; document.querySelector('.history-btn').style='display: none';" class="history-btn">
-                        <p>Подробнее</p><span class="mbr-iconfont mbri-arrow-down"></span></div>
+                        <p>Полное описание</p><span class="mbr-iconfont mbri-arrow-down"></span></div>
         <div class="text-border first"></div>
                     <p style="color: black" class="mbr-text mbr-fonts-style align-center mbr-light m-0 display-7"> 
                     Общество с ограниченной ответственностью  «ПЕТРОШИП»  с 2001 года занимается комплексным обслуживанием судов, является самостоятельной независимой организацией,  имеет действующие Свидетельства   Российского  Морского Регистра Судоходства, Российского Речного Регистра,  лицензию  МЧС,  все  необходимые для  работы сертификаты лицензии  и одобрения.     
