--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
                     var year = today.getFullYear();
                     document.querySelector('.nowDATE').innerHTML = year;
                 </script>
-                <div style="background: #ddebf8;margin-right: 25px;display: flex;justify-content: center;">
+                <div style="background: #ddebf8;display: flex;justify-content: center;">
                   <img src="assets/images/znachki.jpg">
                   <img style="height: 73px;" src="assets/images/lic.png">
                 </div>
