--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                   <a style="padding: 10px 30px;  color: white;" class="btn btn-sm btn-primary-outline display-4" onclick="document.querySelector('.phone-call').style='display: flex'">Заказать звонок</a></div>
                 	</li>
                   <li>
-            <h4 data-aos="fade-up"
+            <h4 style="padding: 0 10%;" data-aos="fade-up"
             data-aos-easing="ease-in-out"
             data-aos-duration="1000" class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style mbr-white display-5">«Урал-навигатор» позволяет команде использовать множество режимов: ручное управление судном, используя штурвал следящего управления подключенный к «Авторулевому»; автоматическое управление и удержание судна на заданном курсе с погрешностью ±0,5° и иные функции. По результатам испытаний «Авторулевого» получен сертификат СТО РМРС.</h4>
                     <div data-aos="fade-up"
@@ -262,6 +262,14 @@
               <img src="assets/images/wheel.svg">
             </div>
             <h4 class="mbr-fonts-style mbr-card-title align-center display-7">«Урал-навигатор»</h4>
+          </div>
+      </a>
+      <a target="_blank" href="page8.html" class="col-md-4 col-sm-12 row-item">
+          <div class="wrapper">
+            <div class="card-img pb-3 align-center">
+              <img src="assets/images/electro.svg">
+            </div>
+            <h4 class="mbr-fonts-style mbr-card-title align-center display-7">Производство преобразователей электроэнергии различных типов и назначений</h4>
           </div>
       </a>
       </div>
