--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <!---Formbuilder Form--->
                     <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PlJ15yok/Sw1oIi6o4PxMkGZfDZ5YsbJTrAaoaz7A9A3IeOHK5boXmpl9HWbj5RQgchxMYPedjlEU3pddzEnNXnOvPxt4n9KENddQwazh8ct7wdD4EokjTzytsvgWsAl">
                         <div class="row row-sm-offset">
-                            <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение!</div>
+                            <div hidden="hidden" style="width: 64px; text-align: center;" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
                             </div>
                         </div>
@@ -99,7 +99,7 @@
 
 
 
-                <button class="material-btn" onclick="document.querySelector('.phone-call').style='display: flex'"><a class="btn btn-lg display-4">
+                <button class="material-btn material-btn-blue" onclick="document.querySelector('.phone-call').style='display: flex'"><a class="btn btn-lg display-4">
 
                         Заказать звонок</a></button>
 
@@ -125,6 +125,10 @@
                             История</a>
                     </li><li class="nav-item"><a class="nav-link link mbr-black text-white display-4" href="index.html#form1-9">
                             Контакты</a></li>
+                    <li class="nav-item"><a class="nav-link link mbr-black text-white display-4" target="_blank" href="page7.">
+                            Навигаторы</a></li>
+                    <li class="nav-item"><a class="nav-link link mbr-black text-white display-4" target="_blank" href="page8.html">
+                            Преобразователи энергии</a></li>
                     <!-- <li class="nav-item calls">
                       <a class="btn btn-lg btn-primary-outline display-4" onclick="document.querySelector('.phone-call').style='display: flex'">
                         Заказать звонок</a></li> -->
@@ -176,8 +180,8 @@
                 		<div data-aos="fade-up"
 					    data-aos-easing="ease-out-cubic"
 					    data-aos-duration="1000" class="mbr-section-btn align-left pt-3">
-                		<a style="padding: 10px 30px;" class="green-btn btn btn-sm btn-white-outline display-4" href="index.html#dragArea-2-1">Написать</a>
-                  <a style="padding: 10px 30px;  color: white;" class="btn btn-sm btn-primary-outline display-4" onclick="document.querySelector('.phone-call').style='display: flex'">Заказать звонок</a></div>
+                		<a style="padding: 10px 30px;" class="material-btn material-btn-white green-btn btn btn-sm btn-white-outline display-4" href="index.html#dragArea-2-1">Написать</a>
+                  <a style="padding: 10px 30px;  color: white;" class="material-btn material-btn-blue btn btn-sm btn-primary-outline display-4" onclick="document.querySelector('.phone-call').style='display: flex'">Заказать звонок</a></div>
                 	</li>
                   <li>
             <h4 style="padding: 0 10%;" data-aos="fade-up"
@@ -256,7 +260,7 @@
             <h4 class="mbr-fonts-style mbr-card-title align-center display-7">Навигационные карты и литература&nbsp;</h4>
           </div>
       </a>
-      <a href="index.html#tab-content" onclick="document.querySelectorAll('a.nav-link.mbr-fonts-style.show.display-7')[7].click()" class="col-md-4 col-sm-12 row-item">
+     <!--  <a href="index.html#tab-content" onclick="document.querySelectorAll('a.nav-link.mbr-fonts-style.show.display-7')[7].click()" class="col-md-4 col-sm-12 row-item">
           <div class="wrapper">
             <div class="card-img pb-3 align-center">
               <img src="assets/images/wheel.svg">
@@ -271,7 +275,7 @@
             </div>
             <h4 class="mbr-fonts-style mbr-card-title align-center display-7">Производство преобразователей электроэнергии различных типов и назначений</h4>
           </div>
-      </a>
+      </a> -->
       </div>
 	</div>
 </section>
@@ -466,7 +470,7 @@
 <div style="border-color: #8d97ad3d;" class="text-border"></div>
 <p style="color: black" class="mbr-text mbr-fonts-style  mbr-light m-0 display-7"> Сотрудничаем с <a href="https://www.korabel.ru/">Корабел.Ру</a> с 2014 года</p>
 <div style="text-align: end;">
-	<a href="https://www.korabel.ru/catalogue/company/petroship/laboratoriya_elektroradionavigacii.html" style="padding: 10px 30px;" class="btn btn-sm btn-primary-outline display-4" onclick="document.querySelector('.phone-call').style='display: flex'"> Мы на Корабел.Ру</a>
+	<a href="https://www.korabel.ru/catalogue/company/petroship/laboratoriya_elektroradionavigacii.html" style="padding: 10px 30px;" class="material-btn-blue material-btn btn btn-sm btn-primary-outline display-4" onclick="document.querySelector('.phone-call').style='display: flex'"> Мы на Корабел.Ру</a>
 </div>
                 </div>
             </div>
@@ -609,7 +613,7 @@
                     <!---Formbuilder Form--->
                     <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PlJ15yok/Sw1oIi6o4PxMkGZfDZ5YsbJTrAaoaz7A9A3IeOHK5boXmpl9HWbj5RQgchxMYPedjlEU3pddzEnNXnOvPxt4n9KENddQwazh8ct7wdD4EokjTzytsvgWsAl">
                         <div class="row row-sm-offset">
-                            <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение!</div>
+                            <div hidden="hidden" style="width: 64px; text-align: center;" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
                             </div>
                         </div>
