--- a/page8.html
+++ b/page8.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	<link rel="shortcut icon" href="assets/images/logo2.png" type="image/x-icon">
 	<meta name="description" content="">
+  <title>ПЕТРОШИП - Преобразователи энергии</title>
 	<link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
