--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
                             История</a>
                     </li><li class="nav-item"><a class="nav-link link mbr-black text-white display-4" href="index.html#form1-9">
                             Контакты</a></li>
-                    <li class="nav-item"><a class="nav-link link mbr-black text-white display-4" target="_blank" href="page7.">
+                    <li class="nav-item"><a class="nav-link link mbr-black text-white display-4" target="_blank" href="page7.pdf">
                             Навигаторы</a></li>
-                    <li class="nav-item"><a class="nav-link link mbr-black text-white display-4" target="_blank" href="page8.html">
+                    <li class="nav-item"><a class="nav-link link mbr-black text-white display-4" target="blank" href="page8.html">
                             Преобразователи энергии</a></li>
                     <!-- <li class="nav-item calls">
                       <a class="btn btn-lg btn-primary-outline display-4" onclick="document.querySelector('.phone-call').style='display: flex'">
