--- a/page8.html
+++ b/page8.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	<link rel="shortcut icon" href="assets/images/logo2.png" type="image/x-icon">
 	<meta name="description" content="">
-  <title>ПЕТРОШИП - Преобразователи энергии</title>
+  <title>Преобразователи энергии</title>
 	<link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -20,11 +20,20 @@
 
   <link rel="stylesheet" type="text/css" href="assets/mobirise/css/mbr-2.css">
 </head>
+<style type="text/css">
+ul li::before {
+    content: "\2022";
+    font-weight: bold;
+    display: inline-block;
+    width: 1em;
+    margin-left: -1em;
+}
+</style>
 <body>
 	<a class="top" href="page8.html#top-1">
             <span class="control_next mbr-iconfont mbri-up"></span>
 </a>
-	<a style="top: 80%;" class="top" onclick="document.querySelector('.phone-call').style='display: flex'">
+	<a class="top2" onclick="document.querySelector('.phone-call').style='display: flex'">
             <span style="font-size: 40px; border-radius: 50% !important; margin: -32% 9%;" class="control_next mbr-iconfont mbri-user"></span>
 </a>
 	<section class="phone-call">
@@ -70,8 +79,7 @@
                         <a class="nav-link link mbr-black text-white display-4" href="index.html#features06-f" aria-expanded="false">Услуги</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link mbr-black text-white display-4" href="index.html#features06-t">
-                            Сертификаты</a>
+                        
                     </li><li class="nav-item"><a class="nav-link link mbr-black text-white display-4" href="index.html#form1-9">
                             Контакты</a></li></ul>
 
@@ -87,6 +95,7 @@
         </div>
     </nav>
 </section>
+<h2 style="margin-bottom: 0px;" class="titles mbr-fonts-style mbr-section-title align-center display-2"> Производство преобразователей электроэнергии</h2>
 <div class="container electro">
 	<div class="wrap-catalog-list catalog-tile row">
 		<style type="text/css">
@@ -97,6 +106,23 @@
 				display: block !important;
 			}
 		</style>
+		<div data-ge-content-type="ckeditor">
+
+<p style="text-align: justify;"> Также компания занимается производством преобразователей электроэнергии различных типов и назначений:</p>
+
+<ul>
+	<li style="text-align: justify;">выпрямителей;&nbsp;</li>
+	<li style="text-align: justify;">зарядных устройств;</li>
+	<li style="text-align: justify;">инверторов;</li>
+	<li style="text-align: justify;">преобразователей постоянного напряжения;</li>
+	<li style="text-align: justify;">преобразователей переменного напряжения, частоты и числа фаз;&nbsp;</li>
+	<li style="text-align: justify;">агрегатов бесперебойного питания;&nbsp;</li>
+	<li style="text-align: justify;">источников питания постоянного и переменного тока с нестандартными параметрами в&nbsp;специальном конструктивном исполнении для специфических потребителей и режимов по индивидуальным заказам;</li>
+</ul>
+
+<p style="text-align: justify;">а также низковольтных комплектных устройств, в т.ч. тиристорных коммутаторов переменного тока (устройств автоматического включения резерва).</p>
+</div>
+
 		<div class="card-img pb-3 align-center col-md-4 col-sm-12 row-item">
 			<a href="page8.html#ge-content" onclick="lookFor();document.querySelector('.ge-content:nth-child(1)').className+=' ge-active';">
 				<div class="card-img pb-3 align-center-wrap">
