--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <div data-aos="fade-up"
               data-aos-easing="ease-out-cubic"
               data-aos-duration="1000" class="mbr-section-btn align-left pt-3">
-                    <a style="padding: 10px 30px;  color: white;" class="btn btn-sm btn-primary-outline display-4" href="page7.pdf">Полное описание</a>
+                    <a style="padding: 10px 30px;  color: white;" class="material-btn material-btn-blue btn btn-sm btn-primary-outline display-4" href="page7.pdf">Полное описание</a>
                   </div>
                 </li>
 					  </ul>  
