--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <h4 class="mbr-fonts-style mbr-card-title align-center display-7">Навигационные карты и литература&nbsp;</h4>
           </div>
       </a>
-     <!--  <a href="index.html#tab-content" onclick="document.querySelectorAll('a.nav-link.mbr-fonts-style.show.display-7')[7].click()" class="col-md-4 col-sm-12 row-item">
+      <a href="index.html#tab-content" onclick="document.querySelectorAll('a.nav-link.mbr-fonts-style.show.display-7')[7].click()" class="col-md-4 col-sm-12 row-item">
           <div class="wrapper">
             <div class="card-img pb-3 align-center">
               <img src="assets/images/wheel.svg">
@@ -275,7 +275,7 @@
             </div>
             <h4 class="mbr-fonts-style mbr-card-title align-center display-7">Производство преобразователей электроэнергии различных типов и назначений</h4>
           </div>
-      </a> -->
+      </a>
       </div>
 	</div>
 </section>
@@ -295,8 +295,6 @@
                         <ul class="nav nav-tabs" role="tablist">
                             <li class="nav-item"><a class="nav-link mbr-fonts-style active show display-7" role="tab" data-toggle="tab" href="#tabs2-u_tab1" aria-selected="true">
                                     Сварочные и судоремонтные работы</a></li>
-                            <!-- <li class="nav-item"><a class="nav-link mbr-fonts-style show active display-7">
-                                    Аварийно-спасательное имущество</a></li> -->
                             <li class="nav-item"><a class="nav-link mbr-fonts-style show active display-7" role="tab" data-toggle="tab" href="#tabs2-u_tab2" aria-selected="true">
                                     Освидетельствование аварийно-спасательного имущества </a></li>
                             <li class="nav-item"><a class="nav-link mbr-fonts-style show active display-7" role="tab" data-toggle="tab" href="#tabs2-u_tab3" aria-selected="true">
@@ -311,6 +309,8 @@
                                     Лаборатория электронавигации </a></li>
                             <li class="nav-item"><a class="nav-link mbr-fonts-style show active display-7" role="tab" data-toggle="tab" href="#tabs2-u_tab8" aria-selected="true">
                                     «Урал-навигатор» </a></li>
+                            <li class="nav-item"><a class="nav-link mbr-fonts-style show active display-7" role="tab" data-toggle="tab" href="#tabs2-u_tab9" aria-selected="true">
+                                    Преобразователи энергии </a></li>
                         </ul>
                     </div>
                     <div style="padding-top: 100px;" id="tab-content" class="col-md-8">
@@ -424,6 +424,19 @@
 Авторулевой «Урал навигатор"разработан для управления курсом водоизмещающих судов и предназначен для установки на суда с рулевыми механизмами с импульсным или пропорциональным управлением (клапанные гидравлические, электрические секторные или винторулевые колонки)
                                         </p>
                                         <div class="mbr-section-btn pb-3"><a target="_blank" class="btn-underline mr-3 display-4" href="page7.pdf">Читать больше</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="tab8" class="tab-pane" role="tabpanel">
+                                <div class="row">
+                                    <div class="col-lg-12 pb-3">
+                                        <div class="card-img"><img src="assets/images/IMG2.jpg" alt="" title=""></div>
+                                    </div>
+                                    <div class="col-lg-12">
+                                        <h4 class="display-2 align-left title-content pb-2 mbr-fonts-style">Преобразователи электроэнергии</h4>
+                                        <p class="mbr-text mbr-fonts-style align-left display-7"> Наша компания занимается производством преобразователей электроэнергии различных типов и назначений.
+                                        </p>
+                                        <div class="mbr-section-btn pb-3"><a target="blank" class="btn-underline mr-3 display-4" href="page8.html">Читать больше</a></div>
                                     </div>
                                 </div>
                             </div>
