--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                             <div id="tab8" class="tab-pane" role="tabpanel">
                                 <div class="row">
                                     <div class="col-lg-12 pb-3">
-                                        <div class="card-img"><img src="assets/images/IMG2.jpg" alt="" title=""></div>
+                                        <div class="card-img"><img src="assets/images/elec.jpg" alt="" title=""></div>
                                     </div>
                                     <div class="col-lg-12">
                                         <h4 class="display-2 align-left title-content pb-2 mbr-fonts-style">Преобразователи электроэнергии</h4>
